--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "material-ui": "^0.20.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.1",
-    "rebass": "^3.0.0",
-    "semantic-ui-react": "^0.84.0",
     "styled-components": "^4.1.3",
     "typescript": "^3.2.2"
   },
@@ -31,7 +30,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/rebass": "^0.3.3",
-    "@types/styled-components": "^4.1.4"
+    "@types/enzyme": "^3.1.15",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/jsdom": "^12.2.0",
+    "@types/material-ui": "^0.21.5",
+    "@types/styled-components": "^4.1.4",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "jsdom": "^13.1.0"
   }
 }
